Intercambio de datos insert - select

--- a/src/app/add-cliente/add-cliente.component.html
+++ b/src/app/add-cliente/add-cliente.component.html
@@ -80,21 +80,27 @@
 						<label>Dirección</label>
 						 <div class="row">
 	                     	<div class="col-3">
-	                     		<label>Calle</label>
+	                     		<label style="font-size: 14px;">Calle</label>
 	                     		<div class="control">
 	                     			<input class="input" type="text" placeholder="Calle/Población/Villa"  formControlName="Dir_calle">
 	                     		</div>
 	                     	</div>
 	                     	<div class="col-3">
-	                     		<label>Número/Depto</label>
+	                     		<label style="font-size: 14px;">Número/Depto</label>
 	                     		<div class="control">
 	                     			<input class="input" type="text" placeholder="#"  formControlName="Dir_numero">
 	                     		</div>
 	                     	</div>
 	                     	<div class="col-3">
-	                     		<label>Comuna</label>
+	                     		<label style="font-size: 14px;">Comuna</label>
 	                     		<div class="control">
 	                     			<input class="input" type="text" placeholder="Comuna"  formControlName="Dir_comuna">
+	                     		</div>
+	                     	</div>
+	                     	<div class="col-3">
+	                     		<label style="font-size: 14px;">País</label>
+	                     		<div class="control">
+	                     			<input class="input" type="text" placeholder="Pais"  formControlName="Dir_comuna">
 	                     		</div>
 	                     	</div>
 	                    </div>
@@ -110,13 +116,13 @@
 	                    <label>Teléfono</label>
 	                     <div class="row">
 	                     	<div class="col-6">
-	                     		<label>Teléfono fijo</label>
+	                     		<label style="font-size: 14px;">Teléfono fijo</label>
 	                     		<div class="control">
 	                     			<input class="input" type="text" placeholder="(xx) xxx xxx xxx"  formControlName="Telefono">
 	                     		</div>
 	                     	</div>
 	                     	<div class="col-6">
-	                     		<label>Celular</label>
+	                     		<label style="font-size: 14px;">Celular</label>
 	                     		<div class="control">
 	                     			<input class="input" type="text" placeholder="(+569) xxx xxx xxx"  formControlName="Celular">
 	                     		</div>
