--- a/src/app/asignar/asignar.component.html
+++ b/src/app/asignar/asignar.component.html
@@ -17,10 +17,10 @@
   <script src="../assets/js/sb-admin-2.min.js"></script>
   <script src="../assets/vendor/chart.js/Chart.min.js"></script>
 </head>
-<body>
+<body style="background-color: #C4C4C4;">
   <app-nav></app-nav>
-  <div id="content-wrapper" class="d-flex flex-column" style="background-image: url('./assets/img/background4.jpg'); background-position: center; background-size: cover; height: 100%;">
-    <div id="content">
+    <div id="content-wrapper" class="d-flex flex-column" style="padding:10%; padding-top:5%; background-image: url('./assets/img/background4.jpg'); background-position: center; background-size: cover;">
+      <div id="content">
       <div class="container-fluid" style="width: 1000px; "> 
         <section class="section section-container" style="padding-bottom: 10px;">
           <div class="box" style="align-content: center;">              
