--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -139,6 +139,15 @@
       </div>
     </div>
 
+    <div>
+      <p>Hola</p>
+      <div *ngFor="let c of cliente$.data">
+        <p>{{c.id}}</p>
+      </div>
+      <p>Adios</p>
+    </div>
+
+
     <div class="footer">
       <img style="width:100% !important;" src="../assets/img/footer1.png" alt=""/>
     </div>
