--- a/src/app/add-new-product/add-new-product.component.html
+++ b/src/app/add-new-product/add-new-product.component.html
@@ -17,29 +17,38 @@
   <script src="../assets/js/sb-admin-2.min.js"></script>
   <script src="../assets/vendor/chart.js/Chart.min.js"></script>
 </head>
-<body>
-	<app-nav></app-nav>
+<body style="background-color: #C4C4C4;">
+  <app-nav></app-nav>
+    <div id="content-wrapper" style="padding:5%; background-image: url('./assets/img/background4.jpg'); background-position: center; background-size: cover;">
+      <div id="content">
 	<div class="row">
-		<div class="col-7">
-			<section class="section section-container" style="padding-bottom: 10px;">
-		      <div class="box">
-		          <h1 style="margin-left: 12%">Agregar nuevo producto</h1>
-		        <form [formGroup]="messageForm" (ngSubmit)="onSubmit()" style="margin-left: 12%">
-		            <h5 *ngIf="success">Your form is valid!</h5>
-		            <h3 class='subtitle'>{{ title }}</h3>
-		          	<div class="field">
-		          		<label>Nombre del nuevo producto:<input class="input" type="text" v-model="nombreOT"></label>
+		<div class="col-6">
+			<section class="section section-container">
+        <div class="box" style="align-content: center;">
+          <h2>Agregar nuevo producto</h2>
+          <form [formGroup]="Productoform" (ngSubmit)="onSubmit(Productoform.value)">
+            <div class="field">
+              <div class="row">
+                <div class="col-1-sm">
+                  <img style="padding:10px;" src="../assets/icons/svg/work_c.svg"  width="72" class="d-inline-block align-center" alt="">
+                </div>
+                <div class="col-6">
+                  <label>Nombre del nuevo producto:
+                    <input class="input" clearInput  type="text" formControlName="nombre_tipo">
+                  </label>
 		          	</div>
-		          <div class="field">
-		          	<div class="control">
-		            	<button class="button is-success">Save</button>
-              		</div>
-              	</div>
-              </form>
-          </div>
+              </div>
+              <div class="field">
+                <div class="control">
+                  <button class="button is-success">Save</button>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
       </section>
   	</div>
-  	<div class="col-4">
+  	<div class="col-6">
   		<section class="section section-container" style="padding-bottom: 10px;">
   			<div class="box">
   				<h2>Productos</h2>
@@ -51,17 +60,9 @@
 		              </tr>
 		            </thead>
 		            <tbody>
-		              <tr>
-		                <th scope="row">1</th>
-		                <td>Marca 1</td>
-		              </tr>
-		              <tr>
-		                <th scope="row">2</th>
-		                <td>Marca 1</td>
-		              </tr>
-		              <tr>
-		                <th scope="row">3</th>
-		                <td>Marca 2 </td>
+		              <tr *ngFor="let prod of tipo$.data">
+		                <th scope="row">{{prod.idTipo}}</th>
+		                <td>{{prod.nombre_tipo}}</td>
 		              </tr>
 		          	</tbody>
 		      	</table>
@@ -69,4 +70,5 @@
 		  </section>
 		</div>
 	</div>
+</div></div>
 </body>
