--- a/src/app/add-new-product/add-new-product.component.html
+++ b/src/app/add-new-product/add-new-product.component.html
@@ -19,20 +19,20 @@
 </head>
 <body style="background-color: #C4C4C4;">
   <app-nav></app-nav>
-    <div id="content-wrapper" style="padding:5%; background-image: url('./assets/img/background4.jpg'); background-position: center; background-size: cover;">
+    <div id="content-wrapper" style="background-image: url('./assets/img/background4.jpg'); background-position: center; background-size: cover;">
       <div id="content">
 	<div class="row">
-		<div class="col-6">
+		<div class="col-6" center>
 			<section class="section section-container">
         <div class="box" style="align-content: center;">
           <h2>Agregar nuevo producto</h2>
           <form [formGroup]="Productoform" (ngSubmit)="onSubmit(Productoform.value)">
             <div class="field">
-              <div class="row">
-                <div class="col-1-sm">
-                  <img style="padding:10px;" src="../assets/icons/svg/work_c.svg"  width="72" class="d-inline-block align-center" alt="">
+              <div class="row" style="margin-left: 10%;">
+                <div class="col-2">
+                  <img  src="../assets/icons/svg/work_c.svg"  width="72" class="d-inline-block align-center" alt="">
                 </div>
-                <div class="col-6">
+                <div class="col-8">
                   <label>Nombre del nuevo producto:
                     <input class="input" clearInput  type="text" formControlName="nombre_tipo">
                   </label>
@@ -40,7 +40,7 @@
               </div>
               <div class="field">
                 <div class="control">
-                  <button class="button is-success">Save</button>
+                  <button class="button is-success"  style="margin-left: 70%;">Guardar</button>
                 </div>
               </div>
             </div>
@@ -49,24 +49,33 @@
       </section>
   	</div>
   	<div class="col-6">
-  		<section class="section section-container" style="padding-bottom: 10px;">
+  		<section class="section section-container" style="padding-bottom: 20%;">
   			<div class="box">
-  				<h2>Productos</h2>
-  				<table class="table table-hover">
-		            <thead>
-		              <tr>
-		                <th scope="col">#</th>
-		                <th scope="col">Tipo</th>
-		              </tr>
-		            </thead>
-		            <tbody>
-		              <tr *ngFor="let prod of tipo$.data">
-		                <th scope="row">{{prod.idTipo}}</th>
-		                <td>{{prod.nombre_tipo}}</td>
-		              </tr>
-		          	</tbody>
-		      	</table>
-		      </div>
+           <div class="row">
+            <div class="col-2" style="margin-left: 5%;">
+              <img  src="../assets/icons/svg/box_c.svg"  width="72" class="d-inline-block align-center" alt="">
+            </div>
+            <div class="col-8">
+              <h2>Listado de Productos</h2>
+            </div>
+          </div>
+          <div class="table-responsive">
+            <table class="table">
+              <thead class="thead-danger">
+                <tr class="table-danger">
+                  <th style="text-align: center;" scope="col">#</th>
+                  <th scope="col">Producto</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let prod of tipo$.data">
+                  <th class="table-danger" scope="row">{{prod.idTipo}}</th>
+                  <td>{{prod.nombre_tipo}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
 		  </section>
 		</div>
 	</div>
