--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -30,11 +30,11 @@
       <a class="btn btn-outline-danger"  type="button" routerLink="/orden-trabajo">
         <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/organize.svg" width="45" class="d-inline-block align-center" alt="">Generar OT
       </a>
-      <a class="btn btn-outline-danger"  type="button" routerLink="/asignar">
-        <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/worker.svg" width="45" class="d-inline-block align-center" alt="">Asignar OT
+      <a class="btn btn-outline-danger"  type="button" routerLink="/clientes">
+        <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/worker.svg" width="45" class="d-inline-block align-center" alt="">Clientes
       </a>
       <a class="btn btn-outline-danger"  type="button" routerLink="/ficha">
-        <img style="padding:10px; padding-left: 5px;"  src="./assets/icons/svg/helmet.svg" width="45" class="d-inline-block align-center" alt="">Detalles OT
+        <img style="padding:10px; padding-left: 5px;"  src="./assets/icons/svg/helmet.svg" width="45" class="d-inline-block align-center" alt="">Ordenes de Trabajo
       </a>
       <a class="btn btn-outline-danger"  type="button" routerLink="/nueva-moto">
         <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/motorcycle.svg" width="45" class="d-inline-block align-center" alt="">Nuevo modelo
