--- a/src/app/add-new-product/add-new-product.component.html
+++ b/src/app/add-new-product/add-new-product.component.html
@@ -59,8 +59,8 @@
               <h2>Listado de Productos</h2>
             </div>
           </div>
-          <div class="table-responsive">
-            <table class="table">
+          <div class="table-responsive" style="align-content: center;">
+            <table class="table" style="width:50%; margin-left: 25%;">
               <thead class="thead-danger">
                 <tr class="table-danger">
                   <th style="text-align: center;" scope="col">#</th>
@@ -69,7 +69,7 @@
               </thead>
               <tbody>
                 <tr *ngFor="let prod of tipo$.data">
-                  <th class="table-danger" scope="row">{{prod.idTipo}}</th>
+                  <th class="table-danger" style="text-align: center;" scope="row">{{prod.idTipo}}</th>
                   <td>{{prod.nombre_tipo}}</td>
                 </tr>
               </tbody>
